Fixed spacing for contact info

--- a/css/main.css
+++ b/css/main.css
@@ -234,6 +234,10 @@ section.apps .single-post > .post-content .post-inner-content {
         margin-bottom: 10px;
     }
 
+    p .contactLabel {
+        text-align: center;
+    }
+
     .social-icons {
         float: left;
         clear: both;
